use github action for deployment

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="referrer" content="no-referrer-when-downgrade"/>
     <title>Speak to me</title>
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
       (function(l) {
         if (l.search[1] === '/' ) {
           var decoded = l.search.slice(1).split('&').map(function(s) { 
@@ -16,7 +16,7 @@
         }
       }(window.location))
     </script>
-    <!-- End Single Page Apps for GitHub Pages -->
+    End Single Page Apps for GitHub Pages -->
   </head>
   <body>
     <div id="app"></div>
